--- a/components/atom/switch/package.json
+++ b/components/atom/switch/package.json
@@ -9,7 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/react-atom-label": "1"
+    "@s-ui/react-atom-label": "1",
+    "@s-ui/react-primitive-loading-icon": "1"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
