chore(Root): add lock file and enable cache in gha installs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,7 @@ jobs:
         uses: styfle/cancel-workflow-action@0.6.0
         with:
           access_token: ${{ github.token }}
+
   # Assigns the event creator to the PR
   assign_pr_owner:
     runs-on: ubuntu-latest
@@ -24,15 +25,19 @@ jobs:
         if: github.event_name == 'pull_request' && github.event.action == 'opened'
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+
   # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
+          cache: true
+
       - name: Build dependencies
         run: |
           npm run phoenix:ci
@@ -53,14 +58,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
+          cache: true
+
       - name: Linting
         run: |
           npm run phoenix:ci
           npm run lint
+
   # Test components
   testing:
     runs-on: ubuntu-latest
@@ -85,9 +94,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
+          cache: true
+
       - name: Install xvfb for headless testing
         run: sudo apt-get install xvfb
 
@@ -98,6 +110,7 @@ jobs:
         run: |
           npm run phoenix:ci
           xvfb-run --auto-servernum npm run test -- --ci --coverage
+
       - name: Log Master Coverage
         uses: actions/github-script@v6
         id: coverage-master
@@ -105,6 +118,7 @@ jobs:
           script: |
             const script = require('./.github/SCRIPTS/exportCoverageFromMarkdownShields')
             await script({github, context, core, exec}, './README.md')
+
       - name: Log Current Coverage
         uses: actions/github-script@v6
         id: coverage-current
@@ -112,18 +126,22 @@ jobs:
           script: |
             const script = require('./.github/SCRIPTS/exportCoverageFromJsonSummary')
             await script({github, context, core, exec}, './coverage/coverage.json')
+
       - name: prepare coverage directory
         run: |
           mkdir _coverage
           cp -rf ./coverage/coverage.xml ./coverage/coverage.json ./coverage/report-html/* ./_coverage/
           rm -rf coverage/
           mv _coverage coverage
+
       - name: Compress coverage directory
         run: tar -zcvf coverage-dir.tar.gz ./coverage/
+
       - uses: actions/upload-artifact@v2
         with:
           name: coverage-folder
           path: coverage-dir.tar.gz
+
   # Publish the necessary npm new package versions
   release:
     needs: [lint, testing]
@@ -132,10 +150,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
+          cache: true
+
       - name: Comment Coverage
         if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize')
         uses: actions/github-script@v6
@@ -166,6 +187,7 @@ jobs:
                 currentCoveredLines: needsObject.testing.outputs.coverage_lines_covered_current
               }
             )
+
       - name: Update Coverage Badges
         if: github.event_name == 'push'
         uses: actions/github-script@v6
@@ -183,6 +205,7 @@ jobs:
                 currentPCTLines: needsObject.testing.outputs.coverage_lines_pct_current
               }
             )
+
       - name: Update README.md Coverage badges
         uses: EndBug/add-and-commit@v7
         if: github.event_name == 'push'
@@ -194,6 +217,7 @@ jobs:
           author_name: ${{ env.GITHUB_USER }}
           author_email: ${{ env.GITHUB_EMAIL }}
           message: 'chore(Root): Update coverage badges'
+
       - name: Release components
         if: github.event_name == 'push'
         run: |
@@ -204,6 +228,7 @@ jobs:
           GITHUB_TOKEN: ${{github.token}}
           GITHUB_USER: sui-bot
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
   # Deploy artifact to Vercel
   deploy:
     needs: [build, lint, testing]
@@ -213,25 +238,32 @@ jobs:
       url: ${{ steps.deploy.outputs.url }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
+          cache: true
+
       - uses: actions/download-artifact@v2
         with:
           name: public-folder
           path: .
+
       - uses: actions/download-artifact@v2
         with:
           name: coverage-folder
           path: .
+
       - name: Uncompress public directory
         run: |
           tar -zxvf ./public-dir.tar.gz
           rm ./public-dir.tar.gz
+
       - name: Uncompress coverage directory
         run: |
           tar -zxvf ./coverage-dir.tar.gz -C ./public/
           rm ./coverage-dir.tar.gz
+
       - name: Deploy
         id: deploy
         run: |
