--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "release": "sui-mono release",
     "start": "sui-studio start",
     "serve": "npm run build && npx http-server public",
-    "test": "sui-studio test -- --coverage",
+    "test": "sui-studio test -- --headless --coverage",
     "test:watch": "sui-studio test --watch",
     "pre-commit": "npm run lint:js  -- --staged && npm run lint:sass -- --staged",
     "pre-push": "npm run test"
