--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lint:sass": "sui-lint sass",
     "respawn": "npm run clean && npm run phoenix && npm run install:themes",
     "install:themes": "node scripts/build-themes.js",
+    "install:ci": "npm ci --include=dev --no-found --no-audit && npx -y ultra-runner --raw --recursive prepublishOnly",
     "phoenix": "npx @s-ui/mono@2 phoenix && npx -y ultra-runner --raw --recursive prepublishOnly",
-    "phoenix:ci": "npx @s-ui/mono@2 phoenix && npx -y ultra-runner --raw --recursive prepublishOnly",
     "release": "sui-mono release",
     "start": "sui-studio start",
     "serve": "npm run build && npx http-server public",
