--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "Mono repo, multi package containing all SUI components.",
   "private": true,
-  "engines": {
-    "node": "18",
-    "npm": "10"
-  },
   "workspaces": [
     "components/**"
   ],
@@ -31,7 +27,8 @@
     "test": "sui-studio test -- --headless --coverage",
     "test:watch": "sui-studio test --watch",
     "pre-commit": "npm run lint:js  -- --staged && npm run lint:sass -- --staged",
-    "pre-push": "npm run test"
+    "pre-push": "npm run test",
+    "bundler:postinstall": "node ./node_modules/@s-ui/bundler/scripts/postinstall.js"
   },
   "repository": {
     "type": "git",
@@ -58,6 +55,7 @@
   },
   "config": {
     "sui-bundler": {
+      "type": "typescript",
       "vendor": [
         "react",
         "react-dom"
