refactor(components/atom/label): fix import, demo and test files

--- a/components/atom/label/tsconfig.json
+++ b/components/atom/label/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "types": ["react"],
     "outDir": "./lib",
-    "rootDir": "./src"
+    "rootDirs": ["src", "demo", "test"]
   },
   "exclude": ["lib"]
 }
