--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build": "sui-studio build",
+    "bundler:postinstall": "node ./node_modules/@s-ui/bundler/scripts/postinstall.js",
     "check:release": "sui-mono check",
     "clean": "rm -rf ./node_modules && rm -f package-lock.json",
     "co": "sui-mono commit",
@@ -28,7 +29,7 @@
     "test:watch": "sui-studio test --watch",
     "pre-commit": "npm run lint:js  -- --staged && npm run lint:sass -- --staged",
     "pre-push": "npm run test",
-    "bundler:postinstall": "node ./node_modules/@s-ui/bundler/scripts/postinstall.js"
+    "types:check": "tsc"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,7 @@
     "@s-ui/mono": "2",
     "@s-ui/precommit": "3",
     "@s-ui/studio": "11",
+    "@types/mocha": "10.0.6",
     "fs-extra": "10.0.1",
     "globby": "11.0.3",
     "sinon": "11.1.1",
