--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "@s-ui/mono": "2",
     "@s-ui/precommit": "3",
     "@s-ui/studio": "11",
+    "@types/chai": "4.3.16",
+    "@types/chai-dom": "1.11.3",
     "@types/mocha": "10.0.6",
+    "@types/react-dom": "18.3.0",
     "fs-extra": "10.0.1",
     "globby": "11.0.3",
     "sinon": "11.1.1",
