chore(Root): Add more types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@s-ui/bundler/tsconfig.json",
   "compilerOptions": {
+    "types": ["react", "mocha"],
     "rootDir": "./"
   },
   "exclude": ["coverage", "node_modules"]
