chore(Root): test

--- a/components/molecule/rating/package.json
+++ b/components/molecule/rating/package.json
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1",
+    "@s-ui/component-dependencies": "beta",
     "@s-ui/react-atom-icon": "1"
   },
   "keywords": [],
