--- a/components/atom/actionButton/package.json
+++ b/components/atom/actionButton/package.json
@@ -12,7 +12,7 @@
     "@s-ui/react-atom-icon": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
