--- a/components/atom/icon/package.json
+++ b/components/atom/icon/package.json
@@ -13,7 +13,7 @@
     "@s-ui/react-primitive-polymorphic-element": "beta"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
