--- a/components/atom/upload/package.json
+++ b/components/atom/upload/package.json
@@ -14,7 +14,7 @@
     "react-dropzone": "11.5.1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
