--- a/components/behavior/sticky/package.json
+++ b/components/behavior/sticky/package.json
@@ -12,7 +12,7 @@
     "react-stickup": "1.12"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
