--- a/components/molecule/carousel/package.json
+++ b/components/molecule/carousel/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "classnames": "2.5.1",
     "intersection-observer": "0.10.0",
-    "@s-ui/component-dependencies": "1",
+    "@s-ui/component-dependencies": "beta",
     "@s-ui/react-hooks": "1"
   },
   "peerDependencies": {
-    "@s-ui/theme": "8"
+    "@s-ui/theme": "beta"
   },
   "repository": {
     "type": "git",
