--- a/components/molecule/notification/package.json
+++ b/components/molecule/notification/package.json
@@ -13,7 +13,7 @@
     "@s-ui/react-icons": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
