--- a/components/atom/upload/package.json
+++ b/components/atom/upload/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@loadable/component": "5.15.x",
     "@s-ui/react-atom-button": "1",
-    "react-dropzone": "11.5.3"
+    "react-dropzone": "11.5.1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
