--- a/components/molecule/thumbnail/package.json
+++ b/components/molecule/thumbnail/package.json
@@ -12,7 +12,7 @@
     "@s-ui/react-atom-image": "2"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
