--- a/components/organism/nestedCheckboxes/package.json
+++ b/components/organism/nestedCheckboxes/package.json
@@ -12,7 +12,7 @@
     "@s-ui/react-molecule-checkbox-field": "5"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
