--- a/components/atom/input/package.json
+++ b/components/atom/input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-atom-input",
-  "version": "5.37.0",
+  "version": "5.36.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "react-imask": "6.4.3"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "beta"
   },
   "keywords": [],
   "author": "",
