--- a/package.json
+++ b/package.json
@@ -57,18 +57,7 @@
     "validate-commit-msg": "2.12.2"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "latest"
-  },
-  "overrides": {
-    "@s-ui/theme": "beta"
-  },
-  "overrides": {
-    "@s-ui/theme": "beta"
-  },
-  "overrides": {
-    "dset": "3.1.4",
-    "micromatch": "4.0.8",
-    "webpack": "5.94.0"
+    "@s-ui/component-dependencies": "beta"
   },
   "config": {
     "sui-bundler": {
