--- a/components/primitive/polymorphicElement/package.json
+++ b/components/primitive/polymorphicElement/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/react-primitive-polymorphic-element",
-  "version": "1.2.0",
+  "version": "1.2.0-beta.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' lib"
   },
   "peerDependencies": {
-    "@s-ui/theme": "8"
+    "@s-ui/theme": "beta"
   },
   "repository": {
     "type": "git",
