--- a/package.json
+++ b/package.json
@@ -57,13 +57,7 @@
     "validate-commit-msg": "2.12.2"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "latest"
-  },
-  "overrides": {
-    "@s-ui/theme": "beta"
-  },
-  "overrides": {
-    "@s-ui/theme": "beta"
+    "@s-ui/component-dependencies": "beta"
   },
   "config": {
     "sui-bundler": {
