--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "validate-commit-msg": "2.12.2"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "beta"
   },
   "overrides": {
     "dset": "3.1.4",
@@ -92,7 +92,7 @@
   ],
   "eslintConfig": {
     "extends": [
-      "./node_modules/@s-ui/lint/eslintrc.ts.js"
+      "./node_modules/@s-ui/lint/eslintrc.js"
     ]
   },
   "stylelint": {
