--- a/package.json
+++ b/package.json
@@ -57,10 +57,7 @@
     "validate-commit-msg": "2.12.2"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "latest"
-  },
-  "overrides": {
-    "@s-ui/theme": "beta"
+    "@s-ui/component-dependencies": "beta"
   },
   "overrides": {
     "dset": "3.1.4",
