--- a/components/atom/slider/package.json
+++ b/components/atom/slider/package.json
@@ -12,7 +12,7 @@
     "rc-slider": "9"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "beta"
+    "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
   "author": "",
