--- a/components/atom/textarea/package.json
+++ b/components/atom/textarea/package.json
@@ -13,7 +13,7 @@
     "@s-ui/react-atom-input": "5"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "beta"
+    "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
   "author": "",
