--- a/components/molecule/dataCounter/package.json
+++ b/components/molecule/dataCounter/package.json
@@ -15,7 +15,7 @@
     "@s-ui/react-molecule-field": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "beta"
+    "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
   "author": "",
