--- a/components/molecule/phoneInput/package.json
+++ b/components/molecule/phoneInput/package.json
@@ -9,14 +9,14 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "beta",
+    "@s-ui/component-dependencies": "1",
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-molecule-dropdown-list": "2",
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-molecule-input-field": "4"
   },
   "peerDependencies": {
-    "@s-ui/theme": "beta"
+    "@s-ui/theme": "8"
   },
   "repository": {
     "type": "git",
