--- a/components/molecule/photoUploader/package.json
+++ b/components/molecule/photoUploader/package.json
@@ -19,7 +19,7 @@
     "sortablejs": "1.14.0"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "beta"
+    "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
   "author": "",
