chore(Root): revert

--- a/components/atom/popover/package.json
+++ b/components/atom/popover/package.json
@@ -15,7 +15,7 @@
     "reactstrap": "8.9.0"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "latest"
   },
   "keywords": [],
   "author": "",
