--- a/components/atom/switch/package.json
+++ b/components/atom/switch/package.json
@@ -13,7 +13,7 @@
     "@s-ui/react-primitive-loading-icon": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "latest"
   },
   "keywords": [],
   "author": "",
