--- a/components/atom/tooltip/package.json
+++ b/components/atom/tooltip/package.json
@@ -17,7 +17,7 @@
     "ua-parser-js": "0.7.33"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "latest"
   },
   "keywords": [],
   "author": "",
