--- a/components/molecule/avatar/package.json
+++ b/components/molecule/avatar/package.json
@@ -14,7 +14,7 @@
     "@s-ui/react-primitive-injector": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "latest"
   },
   "keywords": [],
   "author": "",
