--- a/components/molecule/carousel/package.json
+++ b/components/molecule/carousel/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "classnames": "2.5.1",
     "intersection-observer": "0.10.0",
-    "@s-ui/component-dependencies": "1",
+    "@s-ui/component-dependencies": "latest",
     "@s-ui/react-hooks": "1"
   },
   "peerDependencies": {
