--- a/components/molecule/phoneInput/package.json
+++ b/components/molecule/phoneInput/package.json
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1",
+    "@s-ui/component-dependencies": "latest",
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-molecule-dropdown-list": "2",
     "@s-ui/react-molecule-dropdown-option": "2",
