--- a/components/molecule/radioButtonField/package.json
+++ b/components/molecule/radioButtonField/package.json
@@ -13,7 +13,7 @@
     "@s-ui/react-molecule-field": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "latest"
   },
   "keywords": [],
   "author": "",
