--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "validate-commit-msg": "2.12.2"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "1"
+    "@s-ui/component-dependencies": "latest"
   },
   "overrides": {
     "@s-ui/theme": "beta"
