--- a/components/atom/backToTop/package.json
+++ b/components/atom/backToTop/package.json
@@ -13,7 +13,7 @@
     "@s-ui/react-hooks": "1"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
   "author": "",
