--- a/components/molecule/breadcrumb/package.json
+++ b/components/molecule/breadcrumb/package.json
@@ -18,7 +18,7 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@s-ui/component-dependencies": "latest",
+    "@s-ui/component-dependencies": "1",
     "@s-ui/react-hooks": "1",
     "@s-ui/react-icons": "1"
   }
