--- a/components/molecule/drawer/package.json
+++ b/components/molecule/drawer/package.json
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "peerDependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "1"
   },
   "keywords": [],
   "author": "",
