--- a/components/molecule/modal/package.json
+++ b/components/molecule/modal/package.json
@@ -9,7 +9,7 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "latest",
+    "@s-ui/component-dependencies": "1",
     "@s-ui/react-hooks": "1"
   },
   "keywords": [],
