fix (Root): revert prettier definition

--- a/package.json
+++ b/package.json
@@ -97,5 +97,5 @@
   "stylelint": {
     "extends": "./node_modules/@s-ui/lint/stylelint.config.js"
   },
-  "prettier": "./node_modules/@s-ui/lint/.prettierrc.js"
+  "prettier": "./node_modules/@s-ui/lint/.prettierrc.ts.js"
 }
