--- a/components/atom/button/package.json
+++ b/components/atom/button/package.json
@@ -9,8 +9,9 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "latest",
-    "@s-ui/react-primitive-loading-icon": "1"
+    "@s-ui/component-dependencies": "1",
+    "@s-ui/react-primitive-loading-icon": "1",
+    "@s-ui/react-atom-icon": "1"
   },
   "keywords": [],
   "license": "MIT"
