feat(components/atom/button): styles

--- a/components/atom/button/package.json
+++ b/components/atom/button/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@s-ui/component-dependencies": "1",
-    "@s-ui/react-primitive-loading-icon": "1"
+    "@s-ui/react-primitive-loading-icon": "1",
+    "@s-ui/react-atom-icon": "1"
   },
   "keywords": [],
   "license": "MIT"
