--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   ],
   "eslintConfig": {
     "extends": [
-      "./node_modules/@s-ui/lint/eslintrc.ts.js"
+      "./node_modules/@s-ui/lint/eslintrc.js"
     ]
   },
   "stylelint": {
