refactor(utils/sui-component-dependencies): move component-dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mono repo, multi package containing all SUI components.",
   "private": true,
   "workspaces": [
-    "components/**"
+    "components/**",
+    "utils/**"
   ],
   "scripts": {
     "build": "sui-studio build",
