--- a/utils/sui-theme/package.json
+++ b/utils/sui-theme/package.json
@@ -8,5 +8,12 @@
     "prepublishOnly": "npm run lib"
   },
   "license": "MIT",
-  "homepage": "https://github.com/SUI-Components/sui"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SUI-Components/sui-components.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues"
+  },
+  "homepage": "https://github.com/SUI-Components/sui-components/tree/master/utils/sui-component-dependencies#readme"
 }
